--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,28 +1,3 @@
-<script>
-  // Mock NextAuth globally for Storybook
-  window.mockNextAuth = {
-    useSession: () => ({
-      data: {
-        user: {
-          id: 'mock-user-id',
-          name: 'Admin User',
-          email: 'admin@example.com',
-          role: 'ADMIN',
-        },
-        expires: new Date(Date.now() + 24 * 60 * 60 * 1000).toISOString(),
-      },
-      status: 'authenticated',
-    }),
-    signIn: () => Promise.resolve({ ok: true }),
-    signOut: () => Promise.resolve({ ok: true }),
-  }
-
-  // Mock Next.js router
-  window.mockRouter = {
-    push: () => Promise.resolve(true),
-    replace: () => Promise.resolve(true),
-    back: () => {},
-    pathname: '/',
-    query: {},
-  }
-</script>
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Jost:wght@400;600;700&display=swap" rel="stylesheet" />
